<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.finalapp.MainActivity"
    android:background="#00ccff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_enter_the_student_apos_s_information_and_class_information_and_click_add"
        android:id="@+id/MainWelcometxt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_Student_ID"
        android:layout_below="@+id/MainWelcometxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/MainWelcometxt"
        android:hint="@string/enter_student_id"
        android:textColorHint="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_First_Name"
        android:layout_below="@+id/edit_Student_ID"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_Student_ID"
        android:hint="@string/enter_student_apos_s_first_name"
        android:textColorHint="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_Last_Name"
        android:layout_below="@+id/edit_First_Name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_First_Name"
        android:hint="@string/enter_student_apos_s_last_name"
        android:textColorHint="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edit_Class_ID"
        android:layout_below="@+id/edit_Last_Name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_Last_Name"
        android:hint="@string/enter_the_class_course_id"
        android:textColorHint="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Class_Name"
        android:layout_below="@+id/edit_Class_ID"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_Class_ID"
        android:hint="@string/enter_the_class_course_name"
        android:textColorHint="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        android:id="@+id/Continue_btn"
        android:layout_below="@+id/edit_Class_Name"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/edit_Class_Name"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_current_database"
        android:id="@+id/view_database_btn"
        android:layout_below="@+id/Continue_btn"
        android:layout_alignEnd="@+id/Continue_btn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_final_grades"
        android:id="@+id/final_grades_btn"
        android:layout_below="@+id/view_database_btn"
        android:layout_alignEnd="@+id/view_database_btn"
        android:layout_alignParentStart="true" />
</RelativeLayout>
