<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.finalapp.LetterGradeActivity"
    android:background="#00ccff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_view_grades_again"
        android:id="@+id/clickHere_txt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/view_grades"
        android:id="@+id/viewAgain_btn"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_click_here_to_go_back_to_main_screen"
        android:id="@+id/back_txt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/backMain_btn"
        android:layout_gravity="center_horizontal"
        android:text="@string/lt_back" />
</LinearLayout>